# slackops-ai-ticket-orchestrator

./: .coveragerc  .dockerignore  .gitignore  .ruff.toml  COMPONENT.md  CONTRIBUTING.md  Design.md  Dockerfile  README.md  file_structure.docx  file_structure.txt  main.py  mypy.ini  new_output.txt  project_structure.txt  pyproject.toml  pytest.ini  tree_hw2.txt
.circleci/: config.yml
infra/: render.yaml
src/ai_adapter/: README.md  pyproject.toml
src/ai_adapter/src/ai_adapter/: __init__.py  ai_adapter.py
src/ai_adapter/tests/: test_ai_adapter.py
src/ai_api/: README.md  pyproject.toml
src/ai_api/ai_api/: __init__.py  ai_interface.py
src/ai_api/src/ai_api/: __init__.py  client.py
src/ai_api/tests/: test_client_abc.py  test_client_injection_ai_api.py  test_contract_imports.py  test_protocol_compliance.py
src/ai_generated_client/: README.md  pyproject.toml
src/ai_generated_client/src/ai_service_api_client/: README.md  pyproject.toml
src/ai_generated_client/src/ai_service_api_client/ai_service_client/: __init__.py
src/ai_generated_client/tests/: test_generated_client.py
src/ai_impl/: pyproject.toml
src/ai_impl/ai_impl/: __init__.py  gemini_client.py  openai_client.py
src/ai_service/: README.md  openapi.json  pyproject.toml
src/ai_service/src/ai_service/: main.py  models.py  routes.py
src/ai_service/tests/: test_di_activation.py  test_routes_ai.py
src/chat_api/: README.md  pyproject.toml
src/chat_api/chat_api/: __init__.py  chat_interface.py  client.py  message.py  provider.py  tests.py
src/chat_api/chat_api/chat_impl/: __init__.py  slack_chat_client.py
src/chat_api/src/chat_api/: __init__.py  client.py  py.typed
src/chat_api/tests/: test_client_abc.py  test_client_injection_chat_api.py  test_contract_imports.py  test_protocol_compliance.py
src/email_api/: README.md  __init__.py  client.py  py.typed  pyproject.toml
src/email_api/src/email_api/: __init__.py  client.py
src/email_api/tests/: test_api.py  test_client_cov.py
src/gemini_impl/: README.md  pyproject.toml
src/gemini_impl/src/gemini_impl/: __init__.py  client.py  config.py  errors.py  provider.py
src/gemini_impl/tests/: __init__.py  test_gemini_provider.py
src/gmail_impl/: __init__.py  gmail_client.py  py.typed  pyproject.toml  setup.py
src/gmail_impl/src/gmail_impl/: __init__.py  gmail_client.py
src/gmail_impl/tests/: __init__.py  test_gmail_client.py  test_gmail_client_cov.py
src/jira_adapter/: README.md  pyproject.toml
src/jira_adapter/src/jira_adapter/: __init__.py  adapter.py  py.typed
src/jira_adapter/tests/: test_adapter_smoke.py
src/jira_impl/: README.md  pyproject.toml
src/jira_impl/src/jira_impl/: __init__.py  config.py  impl.py  jira_client.py  py.typed
src/jira_impl/tests/: __init__.py  test_di.py  test_env_vars.py  test_jira_client_methods.py  test_jira_client_unit.py  test_ticket_impl_smoke.py
src/jira_service/: README.md  openapi.json  pyproject.toml
src/jira_service/src/jira_service/: __init__.py  main.py  models.py  routes.py
src/jira_service/tests/: __init__.py  test_health.py  test_models.py  test_openapi.py  test_routes_tickets.py
src/mail_client_adapter/: adapter.py  pyproject.toml  setup.py
src/mail_client_adapter/src/mail_client_adapter/: __init__.py  adapter.py  backed_client.py  mapping.py
src/mail_client_adapter/tests/: test_adapter_service_and_client_cov.py  test_adapter_unit.py  test_adapterclient_contract.py  test_servicebacked_client_cov.py
src/mail_client_service/: README.md  __init__.py  app.py  pyproject.toml  setup.py
src/mail_client_service/routes/: __init__.py  messages.py
src/mail_client_service/tests/: __init__.py  conftest.py  conftest_mail_client_service.py  test_errors.py  test_messages.py  test_messages_routes.py
src/openai_impl/: README.md  pyproject.toml
src/openai_impl/src/openai_impl/: __init__.py  openai_client.py
src/openai_impl/tests/: test_di.py  test_error_sanitization.py  test_generate_response.py  test_openai_client_additional.py
src/slack_adapter/: README.md  __init__.py  adapter.py  pyproject.toml  setup.py
src/slack_adapter/src/slack_adapter/: __init__.py  adapter.py  py.typed  slack_adapter.py
src/slack_adapter/tests/: __init__.py  conftest.py  test_adapter_client_cov.py  test_adapter_client_integration.py  test_adapter_contract.py  test_adapter_cov.py  test_adapter_more_cov.py  test_adapter_service_backed_extra_cov.py  test_slack_adapter.py
src/slack_api/: README.md  __init__.py  pyproject.toml  setup.py
src/slack_api/src/slack_api/: __init__.py  client.py  errors.py  token_store.py  types.py  utils.py  validators.py
src/slack_api/tests/: test_contract_imports.py  test_protocol_compliance.py  test_types_roundtrip.py  test_utils.py  test_validators.py
src/slack_impl/: README.md  __init__.py  oauth.py  pyproject.toml  setup.py  slack_client.py  token_store.py
src/slack_impl/src/slack_impl/: __init__.py  oauth.py  py.typed  slack_client.py  token_store.py
src/slack_impl/tests/: test_channel_members.py  test_channels.py  test_delete_message.py  test_di.py  test_get_messages.py  test_health.py  test_oauth_and_tokens.py  test_oauth_cov.py  test_post_message.py  test_sanitize_text.py  test_send_message.py  test_slack_client_cov.py  test_slack_client_online_cov.py  test_token_store.py
src/slack_service/: README.md  app.py  openapi.json  pyproject.toml  setup.py
src/slack_service/src/slack_service/: __init__.py  ai_router.py  app.py  main.py  models.py  py.typed  routes.py
src/slack_service/tests/: test_channels.py  test_health.py  test_models.py  test_openapi.py  test_post_message_service.py  test_routes_channels.py  test_routes_messages.py
src/tickets_adapter/: pyproject.toml
src/tickets_adapter/src/tickets_adapter/: __init__.py  adapter.py
src/tickets_adapter/tests/: test_adapter_smoke.py
src/tickets_api/: README.md  pyproject.toml
src/tickets_api/src/tickets_api/: __init__.py  client.py
src/tickets_api/tests/: __init__.py  test_client_abc.py  test_client_injection_tickets_api.py  test_contract_imports.py  test_protocol_compliance.py
(+133 files in other folders)
