# ================= Root Workspace Configuration =================

[tool.uv.workspace]
members = [
  # ---------------- HW1: Mail Client ----------------
  "src/email_api",
  "src/gmail_impl",
  "src/mail_client_service",
  "clients/python/mail_client_service_client",
  "src/mail_client_adapter",

  # ---------------- HW2: Slack Chat Service ----------------
  "src/chat_api",
  "src/slack_impl",
  "src/slack_service",
  "src/slack_generated_client",
  "src/slack_adapter",
]

# ================= Meta Project =================

[project]
name = "ospsd-team4-fall2025"
version = "0.2.0"
description = "Unified workspace for OSPSD Team 4 — HW1 (Email) + HW2 (Slack Chat Service)"
readme = "README.md"
requires-python = ">=3.12"

# IMPORTANT:
# Root package has NO runtime dependencies.
# All dependencies live inside workspace components.
dependencies = []

# ================= UV Workspace Sources =================
# This PREVENTS PyPI fallback (TA-critical)

[tool.uv.sources]
# -------- HW1 (Email) --------
email-api = { workspace = true }
gmail-impl = { workspace = true }
mail-client-service = { workspace = true }
mail-client-adapter = { workspace = true }
mail-client-service-client = { workspace = true }

# -------- HW2 (Slack) --------
chat-api = { workspace = true }
slack-impl = { workspace = true }
slack-service = { workspace = true }
slack-adapter = { workspace = true }
slack-generated-client = { workspace = true }

# ================= Development Dependency Group =================

[dependency-groups]
dev = [
  "openapi-python-client>=0.27.0",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.7",
  "mypy>=1.10.0",
  "coverage[toml]>=7.0.0",
  "httpx>=0.27.0",
  "types-setuptools",
  "fastapi>=0.121.1",
  "uvicorn>=0.38.0",
]

# ================= Ruff (Strict, TA-Style) =================

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true
src = ["src"]
extend-exclude = [".pytest_cache", "*.egg-info"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # Conflicts with formatter
  "ISC001",  # Conflicts with formatter
  "D203",    # Mutually exclusive with D211
  "D213",    # Mutually exclusive with D212
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
  "email_api",
  "gmail_impl",
  "chat_api",
  "slack_impl",
  "slack_service",
  "slack_adapter",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/slack_adapter/tests/*.py" = [
  "D100","D101","D102","D103","D200","D205",
  "S101",
  "PT018",
  "ANN001","ANN003","ANN201","ANN202","ANN204",
  "ARG001","ARG002",
  "TRY003","EM101","BLE001",
  "PTH100","PLC0415","RUF012","SLF001","TC001",
]

"**/tests/**/conftest.py" = [
  "D100","I001","PLC0415","PTH100","PTH118","PTH120",
]

# ================= Ruff Formatter =================

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ================= MyPy (STRICT, WORKSPACE-SAFE) =================

[tool.mypy]
python_version = "3.12"
strict = true
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
disallow_any_generics = true
show_error_codes = true

# IMPORTANT:
# Only inner package roots are scanned
files = [
  "src/email_api/src",
  "src/mail_client_adapter/src",
  "src/chat_api/src",
  "src/slack_impl/src",
  "src/slack_service/src",
  "src/slack_adapter/src",
  "src/mail_client_service/src",
]

mypy_path = [
  "src",
  "clients",
  "clients/python",
]

# -------- Third-party & generated clients --------
[[tool.mypy.overrides]]
module = [
  "googleapiclient.*",
  "google_auth_oauthlib.*",
  "httpx.*",
  "mail_client_service_client",
  "mail_client_service_client.*",
  "slack_service_api_client",
  "slack_service_api_client.*",
]
ignore_missing_imports = true

# -------- Tests (relaxed typing) --------
[[tool.mypy.overrides]]
module = [
  "tests",
  "email_api.tests", "email_api.tests.*",
  "mail_client_adapter.tests", "mail_client_adapter.tests.*",
  "gmail_impl.tests", "gmail_impl.tests.*",
  "slack_adapter.tests", "slack_adapter.tests.*",
  "slack_service.tests", "slack_service.tests.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ================= Pytest (Root-Level) =================

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["src", "tests"]
pythonpath = ["src", "clients/python"]
markers = [
  "unit: marks tests as unit tests",
  "integration: marks tests as integration tests",
  "e2e: marks tests as end-to-end tests",
  "local_credentials: tests that need locally configured credentials",
]
