# ================= Root Workspace Configuration =================

[tool.uv.workspace]
members = [
  # ---------------- HW1: Mail Client ----------------
  "src/email_api",
  "src/gmail_impl",
  "src/mail_client_service",
  "clients/python/mail_client_service_client",
  "src/mail_client_adapter",

  # ---------------- HW2: Slack Chat Service ----------------
  "src/chat_api",
  "src/slack_impl",
  "src/slack_service",
  "src/slack_generated_client",
  "src/slack_adapter",

  # ---------------- HW3: AI ----------------
  "src/ai_api",
  "src/openai_impl",
  "src/ai_service",
  "src/ai_adapter",
   "src/ai_generated_client",
]

# ================= Meta Project =================

[project]
name = "ospsd-team4-fall2025"
version = "0.2.0"
description = "Unified workspace for OSPSD Team 4 — HW1 + HW2 + HW3"
readme = "README.md"
requires-python = ">=3.12"

dependencies = []

# ================= UV Workspace Sources =================
# TA-CRITICAL: prevents PyPI fallback

[tool.uv.sources]
# -------- HW1 (Email) --------
email-api = { workspace = true }
gmail-impl = { workspace = true }
mail-client-service = { workspace = true }
mail-client-adapter = { workspace = true }
mail-client-service-client = { workspace = true }

# -------- HW2 (Slack) --------
chat-api = { workspace = true }
slack-impl = { workspace = true }
slack-service = { workspace = true }
slack-adapter = { workspace = true }
slack-generated-client = { workspace = true }

# -------- HW3 (AI) --------
ai-api = { workspace = true }
openai-impl = { workspace = true }
ai-service = { workspace = true }
ai-adapter = { workspace = true }
ai-generated-client = { workspace = true }
# ================= Development Dependency Group =================

[dependency-groups]
dev = [
  "openapi-python-client>=0.27.0",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.7",
  "mypy>=1.10.0",
  "coverage[toml]>=7.0.0",
  "httpx>=0.27.0",
  "types-setuptools",
  "fastapi>=0.121.1",
  "uvicorn>=0.38.0",
]

# ================= Ruff =================

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true
src = ["src"]
extend-exclude = [".pytest_cache", "*.egg-info"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "ISC001", "D203", "D213"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
  "email_api",
  "gmail_impl",
  "chat_api",
  "slack_impl",
  "slack_service",
  "slack_adapter",
  "ai_api",
  "openai_impl",
  "ai_service",
  "ai_adapter",
 "ai_generated_client",
 ]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ================= MyPy =================

[tool.mypy]
python_version = "3.12"
strict = true
namespace_packages = true
explicit_package_bases = true

files = [
  "src/email_api/src",
  "src/mail_client_adapter/src",
  "src/chat_api/src",
  "src/slack_impl/src",
  "src/slack_service/src",
  "src/slack_adapter/src",
  "src/mail_client_service/src",
  "src/ai_api/src",
  "src/openai_impl/src",
  "src/ai_service/src",
  "src/ai_adapter/src",
"src/ai_generated_client/src",
]

mypy_path = ["src", "clients", "clients/python"]

[[tool.mypy.overrides]]
module = [
  "httpx.*",
  "mail_client_service_client.*",
  "slack_service_api_client.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests", "ai_adapter.tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ================= Pytest =================

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["src", "tests"]
pythonpath = ["src", "clients/python"]
