# ================= Workspace Configuration =================

[tool.uv.workspace]
members = [
    "src/email_api",
    "src/gmail_impl",
    "src/mail_client_service",
    "clients/python/mail_client_service_client",
    "src/mail_client_adapter",

    "src/chat_api",
    "src/slack_impl",
    "src/slack_service",
    "src/slack_generated_client",
    "src/slack_adapter",

    "src/ai_api",
    "src/openai_impl",
    "src/ai_service",
    "src/ai_generated_client",
    "src/ai_adapter",

    "src/tickets_api",
    "src/jira_impl",
    "src/jira_service",
    "src/jira_generated_client",
    "src/jira_adapter",

    "src/integration_app",
]

# ================= Project Metadata =================

[project]
name = "modular-service-platform"
version = "0.2.0"
description = "A modular, interface-driven platform integrating communication, AI reasoning, and ticketing services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

# ================= Workspace Sources =================
# Prevents accidental PyPI fallback

[tool.uv.sources]
email-api = { workspace = true }
gmail-impl = { workspace = true }
mail-client-service = { workspace = true }
mail-client-adapter = { workspace = true }
mail-client-service-client = { workspace = true }

chat-api = { workspace = true }
slack-impl = { workspace = true }
slack-service = { workspace = true }
slack-adapter = { workspace = true }
slack-generated-client = { workspace = true }

ai-api = { workspace = true }
openai-impl = { workspace = true }
ai-service = { workspace = true }
ai-adapter = { workspace = true }
ai-generated-client = { workspace = true }

tickets-api = { workspace = true }
jira-impl = { workspace = true }
jira-service = { workspace = true }
jira-adapter = { workspace = true }
jira-generated-client = { workspace = true }

# ================= Optional Dependency Groups =================

[project.optional-dependencies]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.12.0",
    "coverage[toml]>=7.0.0",
    "httpx>=0.27.0",
    "types-setuptools",
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
    "openapi-python-client>=0.27.0",
]

email = ["email-api>=0.1.0"]
gmail = ["gmail-impl>=0.1.0"]
chat = ["chat-api>=0.1.0"]
slack = ["slack-impl>=0.1.0"]
ai = ["ai-api>=0.1.0"]
openai = ["openai-impl>=0.1.0"]
tickets = ["tickets-api>=0.1.0"]
jira = ["jira-impl>=0.1.0"]

# ================= Ruff Configuration =================

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true
src = ["src", "clients/python"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "ISC001", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "ANN001", "ARG002", "INP001", "PLC0415",
    "PLR2004", "S101", "SLF001", "S603",
]
"main.py" = ["T201", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
    "email_api",
    "gmail_impl",
    "chat_api",
    "slack_impl",
    "slack_service",
    "slack_adapter",
    "ai_api",
    "openai_impl",
    "ai_service",
    "ai_adapter",
    "tickets_api",
    "jira_impl",
    "jira_service",
    "jira_adapter",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ================= MyPy Configuration =================

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
show_error_codes = true
warn_unused_ignores = true

mypy_path = [
    "src",
    "clients/python",
]

exclude = ["tests/", "src/.*/tests/"]

[[tool.mypy.overrides]]
module = [
    "googleapiclient.*",
    "google_auth_oauthlib.*",
    "httpx.*",
]
ignore_missing_imports = true

# ================= Pytest Configuration =================

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--import-mode=importlib",
]
testpaths = ["src", "tests"]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning",
]
