[project]
name = "ai-adapter"
version = "0.1.0"
description = "Service-backed adapter implementing the AI API"
readme = "README.md"
license = "MIT"

# IMPORTANT:
# Limit Python versions to avoid uv split-resolution error
requires-python = ">=3.12,<3.13"

dependencies = [
  "ai-api",
  "ai-generated-client",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_adapter"]

[tool.pytest.ini_options]
pythonpath = ["src"]
