[project]
name = "ai-api"
version = "0.1.0"
description = "AI client interface with ABC-based contracts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
