[project]
name = "ai-impl"
version = "0.1.0"
description = "AI provider implementations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ai-api",
    "openai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../pyproject.toml"
