[project]
name = "ai-service"
version = "0.1.0"
description = "FastAPI service exposing the OSS AI API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.121.1",
  "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_service"]

[tool.pytest.ini_options]
pythonpath = ["src"]
