# src/email_api/pyproject.toml

[project]
name = "email-api"
version = "0.1.0"
description = "Email client interface with ABC-based contracts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_api"]

# ---- Strict lint & type ----
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","UP","B","C4","PIE","PT","PTH","SIM","TID","RUF","ARG","PL"]
ignore = ["PLR2004","PLR0913","PLR0912","PLR0915","PLR0917"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["email_api"]

[tool.mypy]
python_version = "3.12"
strict = true
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
mypy_path = ["src"]