# src/gmail_impl/pyproject.toml


[project]
name = "gmail-impl"
version = "0.1.0"
description = "Gmail implementation of the email client interface"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

dependencies = [
    "email-api>=0.1.0",
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.1.0",
    "google-api-python-client>=2.100.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmail_impl"]

# ---- Strict lint & type ----
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","UP","B","C4","PIE","PT","PTH","SIM","TID","RUF","ARG","PL"]
ignore = ["PLR2004","PLR0913","PLR0912","PLR0915","PLR0917"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["gmail_impl","email_api"]

[tool.mypy]
python_version = "3.12"
strict = true
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
mypy_path = ["src"]

# Third-party Google libs lack types; ignore import typing for these
[[tool.mypy.overrides]]
module = [
  "googleapiclient.*",
  "google_auth_oauthlib.*",
  "google.*",
]
ignore_missing_imports = true

# tests looser
[[tool.mypy.overrides]]
module = ["gmail_impl.tests", "gmail_impl.tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false