[project]
name = "jira-adapter"
version = "0.1.0"
description = "Service-backed adapter for Jira ticketing"
requires-python = ">=3.12"

dependencies = [
    "tickets-api",
    "jira-generated-client",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
