[project]
name = "jira-impl"
version = "0.1.0"
description = "Jira-backed implementation of the Tickets API"
requires-python = ">=3.12"

dependencies = [
    "tickets-api",
    "httpx",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
