[project]
name = "jira-service"
version = "0.1.0"
description = "FastAPI service wrapping a Jira-backed ticket client"
requires-python = ">=3.12"

dependencies = [
    "tickets-api",
    "jira-impl",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
