[project]
name = "openai-impl"
version = "0.1.0"
description = "OpenAI-backed implementation of the AI API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openai_impl"]

[tool.pytest.ini_options]
pythonpath = ["src"]
