[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slack_adapter"
version = "0.1.0"
description = "Service-backed Slack Chat Client adapter that implements slack_api.ChatClient via HTTP"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Team 4" }]
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27",
  # Tests import the FastAPI app for in-memory integration; keep as a soft dep here
  "fastapi>=0.110",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
namespace_packages = true
plugins = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C90"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]