[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-adapter"
version = "0.1.0"
description = "Service-backed Slack adapter implementing ChatInterface"
requires-python = ">=3.12"
dependencies = [
  "chat-api",
  "slack-generated-client",
]

[tool.hatch.build.targets.wheel]
packages = ["src/slack_adapter"]

[tool.pytest.ini_options]
pythonpath = ["src"]
