[project]
name = "slack-api"
version = "0.1.0"
description = "Slack Chat API Interface (HW2)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_api"]

[tool.ruff]
target-version = "py312"
line-length = 100
