[project]
name = "slack-api"
version = "0.1.0"
description = "Shared Slack API models and interfaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_api"]

[tool.hatch.metadata]
allow-direct-references = true
