[project]
name = "slack-impl"
version = "0.1.0"
description = "Slack API implementation module"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "slack-api @ file://../slack_api"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_impl"]

[tool.hatch.metadata]
allow-direct-references = true
