[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-impl"
version = "0.1.0"
description = "Concrete Slack implementation for ChatInterface"
requires-python = ">=3.12"
dependencies = [
    "chat-api",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/slack_impl"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "unit: marks unit tests",
]
