[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-service"
version = "0.1.0"
description = "FastAPI service wrapping chat client for Slack"
requires-python = ">=3.12"
dependencies = [
    "chat-api",
    "slack-impl",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/slack_service"]

[tool.pytest.ini_options]
pythonpath = ["src"]
