[project]
name = "tickets-adapter"
version = "0.1.0"
description = "Service-backed adapter for tickets API"
requires-python = ">=3.12"
dependencies = [
    "tickets-api",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tickets_adapter"]

[tool.pytest.ini_options]
pythonpath = ["src"]
