[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tickets-api"
version = "0.1.0"
description = "OSS standardized Ticketing API interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/tickets_api"]

[tool.ruff]
extend = "../../pyproject.toml"
